Alignment Issues Resolved

--- a/public/css/account.css
+++ b/public/css/account.css
@@ -6,7 +6,7 @@
   top: 35%;
   left: 35%;
   */
-  width: 500px;
+  width: 650px;
   height: 60px;
   margin: 0 auto;
   margin-top: 275px;
